--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "gitignore": "^0.7.0",
+    "helmet": "^6.0.1",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.7.5",
