--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "connect-mongo": "^4.6.0",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
@@ -18,6 +19,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "git-filter-repo": "^0.0.30",
     "gitignore": "^0.7.0",
     "helmet": "^6.0.1",
     "method-override": "^3.0.0",
