--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "mongoose": "^6.7.5",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-kakao": "^1.0.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
