--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "moment": "^2.29.4",
     "mongoose": "^6.7.5",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-kakao": "^1.0.1",
-    "passport-naver-v2": "^2.0.8"
+    "passport-naver-v2": "^2.0.8",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
