--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-kakao": "^1.0.1",
     "passport-naver-v2": "^2.0.8",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
