--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.259.0",
+    "@aws-sdk/s3-request-presigner": "^3.259.0",
+    "aws-sdk": "^2.1304.0",
     "bcrypt": "^5.1.0",
     "connect-mongo": "^4.6.0",
     "cookie-session": "^2.0.0",
