--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.259.0",
-    "@aws-sdk/s3-request-presigner": "^3.259.0",
-    "aws-sdk": "^2.1304.0",
     "bcrypt": "^5.1.0",
     "connect-mongo": "^4.6.0",
     "cookie-session": "^2.0.0",
@@ -34,8 +31,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-kakao": "^1.0.1",
     "passport-naver-v2": "^2.0.8",
-    "path": "^0.12.7",
-    "sharp": "^0.31.3"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
