--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "git-filter-repo": "^0.0.30",
     "gitignore": "^0.7.0",
     "helmet": "^6.0.1",
+    "lodash": "^4.17.21",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.7.5",
