--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production web : node index.js node index.js",
+    "start": "NODE_ENV=production  node index.js",
     "devStart": "NODE_ENV=development nodemon index.js"
   },
   "keywords": [],
